--- a/NICE-SLAM/Dockerfile
+++ b/NICE-SLAM/Dockerfile
@@ -1,8 +1,6 @@
-FROM determinedai/environments:cuda-11.3-pytorch-1.10-lightning-1.5-tf-2.8-gpu-0.18.5
-ARG DEBIAN_FRONTEND=noninteractive
-ENV TZ=Asia/Shanghai LANG=C.UTF-8 LC_ALL=C.UTF-8 PIP_NO_CACHE_DIR=1
-ENV TORCH_CUDA_ARCH_LIST="8.6"
-ENV MAX_JOBS=48
+FROM determinedai/environments:cuda-11.3-pytorch-1.10-tf-2.8-gpu-0.19.4
+ARG DEBIAN_FRONTEND=noninteractive OPENEXR_VERSION=3.1.5
+ENV TZ=Asia/Shanghai LANG=C.UTF-8 LC_ALL=C.UTF-8 PIP_NO_CACHE_DIR=1 TORCH_CUDA_ARCH_LIST="8.6" MAX_JOBS=48
 
 RUN sed -i  "s/archive.ubuntu.com/mirrors.ustc.edu.cn/g" /etc/apt/sources.list &&\
     sed -i  "s/security.ubuntu.com/mirrors.ustc.edu.cn/g" /etc/apt/sources.list &&\
@@ -32,11 +30,15 @@ RUN sed -i  "s/archive.ubuntu.com/mirrors.ustc.edu.cn/g" /etc/apt/sources.list &
     pip install -U pip &&\
     apt-get clean
 
-COPY .condarc /opt/conda/.condarc
-COPY ./environment.yml /tmp/environment.yml
-RUN conda env update -n base -f /tmp/environment.yml
+# Install OpenEXR
 RUN cd /tmp &&\
-    git clone https://github.com/sxyu/svox2 &&\
-    cd svox2 &&\
-    python setup.py install &&\
-    rm -rf /tmp/*
+    wget https://github.com/AcademySoftwareFoundation/openexr/archive/refs/tags/v${OPENEXR_VERSION}.tar.gz &&\
+    tar -xvzf v${OPENEXR_VERSION}.tar.gz &&\
+    cd openexr-${OPENEXR_VERSION} &&\
+    cmake -B build -GNinja &&\
+    cmake --build build -t install &&\
+    ldconfig && rm -rf /tmp/*
+
+COPY .condarc /opt/conda/.condarc
+COPY ./environment.yaml /tmp/environment.yaml
+RUN conda env update -n base -f /tmp/environment.yaml
